--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write .",
+    "check-format": "prettier --check ."
   },
   "author": "Wissididom",
   "license": "MIT",
   "dependencies": {
     "express": "^4.19.2",
     "helmet": "^7.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2"
   }
 }
