Implement migration script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.19.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "prettier": "^3.3.3"
