--- a/.github/workflows/deno-formatting.yml
+++ b/.github/workflows/deno-formatting.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
       - name: Run deno fmt
         run: |
           deno fmt
